--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js": "^0.1.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.12",
+    "multer": "^1.4.1",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
